Update to 1.18.2 + adding hotkey for break protection

--- a/src/main/resources/assets/more_features_id/lang/en_us.json
+++ b/src/main/resources/assets/more_features_id/lang/en_us.json
@@ -28,6 +28,7 @@
   "key.more_features_id.turnOnAutoMine": "Turn on auto mine",
   "key.more_features_id.turnOnAutoRClick": "Turn on auto right click",
   "key.more_features_id.autoFarmOptions": "Open auto farm options",
+  "key.more_features_id.toggleBreakProtection": "Toggle break protection",
   "auto_farm.more_features_id.title": "AutoFam",
   "message.more_features_id.attackOn": "Attack turn §aOn",
   "message.more_features_id.attackOff": "Attack turn §cOff",
@@ -37,6 +38,8 @@
   "message.more_features_id.clickOn": "Click turn §aOn",
   "message.more_features_id.noFood": "§c§bWARN: §rNo food in offHand",
   "message.more_features_id.noBreakProtection": "§c§bWARN: §rNo break protection",
+  "message.more_features_id.break_protectionOn": "Break protection turn §aOn",
+  "message.more_features_id.break_protectionOff": "Break protection turn §cOff",
   "message.more_features_id.error": "§4§bERROR: §r§cAn error occurred with auto farm turn off auto farm!",
   "options.more_features_id.eatAt" : "Eat at: ",
   "options.more_features_id.attackCoolDown" : "Attack every: ",
